  - Fixed crash on PDF load during fonts enumeration on font files which
    FreeType doesn't understand (closed ticket #83).
  - Prevent Lucide from close on broken JPEGs (closed ticket #80).
  - In single-page view pressing PgUp/PgDn if already at top/bottom of page
    moves to previous/next page (closed ticket #73).
  - Enable printing in reverse order (closed ticket #88).
  - Added small executor (lcd.exe) to set beginlibpath and then execute 
    Lucide.exe.
  - Internal fixes.
  - Added NLS-files: Spanish, Traditional Chinese (Taiwan), Danish.
  - Updated NLS-files: Dutch, German, Swedish.


Beta-3:
  - Added basic printing features, you may print documents as image or
    as postscript on postscript-capable printers.
  - Fixed scrolling problem introduced in beta2 (closed tickets #53, #56, #64).
  - Drawing fixes and improvements (closed ticket #69).
  - Added 'Go to page' dialog, 'Save As...' menuitem works.
  - Djvu plugin improvements, get rid of ddjvuapi.dll.
  - Ability to compile plugins with gcc.
  - Fixes for font substitution (closed ticket #70).
  - NLS-files updates.
  

Beta-2:
  - Avoided using of fontconfig library, created replacement, testing
    needed (closed tickets #30, #32, #35).
  - New application icon and toolbar bitmaps.
  - Implemented rotation.
  - Centers pages if smaller than window, draw gray border (closed ticket #33).
  - WPI creation scripts and dirs (closed ticket #9).
  - Fullscreen implemented (closed ticket #6). Hotkey is Ctrl+L, like in
    Acrobat. Mozilla-like fullscreen (F11) renamed to 'Maximized view'.
  - Added document navigation shortcuts (up/down,pgup/pgdown,
    ctrl-pgup/pgdown,home/end), (closed ticket #7).
  - Plugin interface changes as per Heiko Nitzsche suggestions, compatibility
    changes (closed tickets #18, #40).
  - Fixed Alt-F4 processing (closed ticket #41).
  - Correctly set initial values for comboboxes in settings dialog.
  - Fixed crash on double clicking an empty area in the navigation pane 