@@ -3,7 +3,10 @@ PROTMODE
 
 IMPORTS
 	_LuDocumentNewClass=ludoc.LuDocumentNewClass
+    _LuDocumentCClassData=ludoc.LuDocumentCClassData
+    _LuDocumentClassData=ludoc.LuDocumentClassData
 	_LuPixbufNewClass=ludoc.LuPixbufNewClass
+    _LuPixbufClassData=ludoc.LuPixbufClassData
 	_somParentNumResolve=som.somParentNumResolve
 	_somBuildClass=som.somBuildClass
 	_somPrintf=som.somPrintf
