@@ -34,20 +34,14 @@ name $(EXEDIR)\ludoc
 lib somtk 
 lib libconv
 export LuDocumentNewClass
-export _LuDocumentClassData
-export _LuDocumentCClassData
-export LuDocumentClassData=_LuDocumentClassData
-export LuDocumentCClassData=_LuDocumentCClassData
+export LuDocumentClassData
+export LuDocumentCClassData
 export LuPixbufNewClass
-export _LuPixbufClassData
-export _LuPixbufCClassData
-export LuPixbufClassData=_LuPixbufClassData
-export LuPixbufCClassData=_LuPixbufCClassData
+export LuPixbufClassData
+export LuPixbufCClassData
 export LuIndexNodeNewClass
-export _LuIndexNodeClassData
-export _LuIndexNodeCClassData
-export LuIndexNodeClassData=_LuIndexNodeClassData
-export LuIndexNodeCClassData=_LuIndexNodeCClassData
+export LuIndexNodeClassData
+export LuIndexNodeCClassData
 export createObject
 export getSupportedExtensions
 export getDescription
